samples/_failures_safe/1761290391_8d9891_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0d04b7a.c: In function ‘main’:
./samples/SAFE/__tmp_b0d04b7a.c:151:12: error: expected identifier or ‘(’ at end of input
  151 |     struct Text
      |            ^~~~
./samples/SAFE/__tmp_b0d04b7a.c:151:12: error: expected declaration or statement at end of input
